# experiments

./: CMakeLists.txt  DataSerialization.hpp  Optimize.String.A.Performance.Studies.md  OptimizeString.hpp  Optimize_String.md  StructAndTuple.hpp  clara.cpp  fb_futures.cpp  policy_based_design.cpp  readline.cpp  serializationPerf.cpp  tBalancedBrackets.cpp  tConstructorStyle.cpp  tFile.cpp  tMoveConstructor.cpp  tOptimizeString.cpp  tParamPack.cpp  tSmartPtr.cpp  tStringSearch.cpp  tStructPerfTests.cpp  tTuplePerfTests.cpp  tTuplevsStruct.cpp  tcilk_basic.cpp  test_ncurses.cpp  test_ncurses2.cpp  tparallel_for.cpp
hyperscan/: CMakeLists.txt  simplegrep.cpp
zmq/: Data.hpp  lpclient.cpp  lpserver.cpp
